--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ before_script:
 deploy:
   stage: deploy
   script:
-    - git remote add github git@github.com:nrm/spacetime18.git
+    - if ! git remote | grep github; then git remote add github git@github.com:nrm/spacetime18.git; fi
     - git push --force github master_in_progress
   only:
     - master_in_progress
