Test CI v0.3.1, run_test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ test:
         python3 -m venv venv && \
         source venv/bin/activate && \
         pip install -r requirements.txt && \
-        python3 test.py --layout /opt/spacetime/layouts/layout_2021-08-16.tif --crop /opt/1_20/crop_0_0_0000.tif && \
+        python test.py --layout /opt/spacetime/layouts/layout_2021-08-16.tif --crop /opt/1_20/crop_0_0_0000.tif && \
         cp result.csv ~/'
     - scp deploy_user@172.20.180.215:~/result.csv .
     - ssh deploy_user@172.20.180.215 'rm -rf ~/project ~/result.csv'
