--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,11 +31,8 @@ test:
     - scp -r * deploy_user@172.20.180.215:~/project
     - ssh deploy_user@172.20.180.215 '
         cd ~/project && \
-        python3 -m venv venv && \
-        source venv/bin/activate && \
-        pip install -r requirements.txt && \
-        python test.py --layout /opt/spacetime/layouts/layout_2021-08-16.tif --crop /opt/1_20/crop_0_0_0000.tif && \
-        cp result.csv ~/'
+        chmod +x run_test.sh && \
+        ./run_test.sh'
     - scp deploy_user@172.20.180.215:~/result.csv .
     - ssh deploy_user@172.20.180.215 'rm -rf ~/project ~/result.csv'
   artifacts:
