Test CI v0.3.7, run_test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,9 +30,7 @@ test:
     - ssh deploy_user@172.20.180.215 'which chmod'
     - ssh deploy_user@172.20.180.215 'mkdir -p ~/project'
     - scp -r * deploy_user@172.20.180.215:~/project
-    - ssh deploy_user@172.20.180.215 '
-        cd ~/project && \
-        bash ./run_test.sh'
+    - ssh deploy_user@172.20.180.215 'bash ~/project/run_test.sh'
     - scp deploy_user@172.20.180.215:~/result.csv .
     - ssh deploy_user@172.20.180.215 'rm -rf ~/project ~/result.csv'
   artifacts:
