--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 stages:
   - deploy
   - test
+  - collect
 
 variables:
   GIT_SUBMODULE_STRATEGY: recursive
@@ -11,7 +12,8 @@ before_script:
   - echo "$SPACETIME18_DEPLOY_KEY" | tr -d '\r' | ssh-add -
   - mkdir -p ~/.ssh
   - ssh-keyscan github.com >> ~/.ssh/known_hosts
-  - ssh-keyscan 172.20.180.215 >> ~/.ssh/known_hosts
+  - ssh-keyscan p01.forecast.lan >> ~/.ssh/known_hosts
+  - ssh-keyscan p03.forecast.lan >> ~/.ssh/known_hosts
 
 deploy:
   stage: deploy
@@ -24,21 +26,50 @@ deploy:
   only:
     - master_in_progress
 
-test:
+execute-job-1:
   stage: test
   script:
-    # - ssh deploy_user@172.20.180.215 'which chmod'
-    - ssh deploy_user@172.20.180.215 'rm -rf ~/project ~/result.csv'
-    - ssh deploy_user@172.20.180.215 'mkdir -p ~/project'
-    - scp -r * deploy_user@172.20.180.215:~/project
-    - ssh deploy_user@172.20.180.215 'bash ~/project/run_test.sh'
-    - scp deploy_user@172.20.180.215:~/result.csv .
-    - ssh deploy_user@172.20.180.215 'rm -rf ~/project ~/result.csv'
+    # - ssh deploy_user@p01.forecast.lan 'which chmod'
+    - ssh deploy_user@p01.forecast.lan 'rm -rf ~/project ~/result*.csv'
+    - ssh deploy_user@p01.forecast.lan 'mkdir -p ~/project'
+    - scp -r * deploy_user@p01.forecast.lan:~/project
+    - ssh deploy_user@p01.forecast.lan 'bash ~/project/run_test_p01.sh $CI_COMMIT_SHORT_SHA'
+    - scp deploy_user@p01.forecast.lan:~/result*.csv .
+    - ssh deploy_user@p01.forecast.lan 'rm -rf ~/project ~/result*.csv'
   artifacts:
     paths:
-      - result.csv
+      - result_p01/
     expire_in: 3 week
     when: always
   timeout: 4h
   rules:
     - if: '$CI_COMMIT_MESSAGE =~ /.*run_test.*/'
+
+execute-job-2:
+  stage: test
+  script:
+    - ssh deploy_user@p02.forecast.lan 'rm -rf ~/project ~/result*.csv'
+    - ssh deploy_user@p02.forecast.lan 'mkdir -p ~/project'
+    - scp -r * deploy_user@p02.forecast.lan:~/project
+    - ssh deploy_user@p02.forecast.lan 'bash ~/project/run_test_p01.sh $CI_COMMIT_SHORT_SHA'
+    - scp deploy_user@p02.forecast.lan:~/result*.csv .
+    - ssh deploy_user@p02.forecast.lan 'rm -rf ~/project ~/result*.csv'
+  artifacts:
+    paths:
+      - result_p02/
+    expire_in: 3 week
+    when: always
+  timeout: 4h
+  rules:
+    - if: '$CI_COMMIT_MESSAGE =~ /.*run_test.*/'
+
+collect-results:
+  stage: collect
+  script:
+    - mkdir -p combined_results
+    - cp result_p01/* combined_results/
+    - cp result_p02/* combined_results/
+  artifacts:
+    paths:
+      - combined_results/
+    expire_in: 1 week
