multiple test version 0.11. run_test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ execute-job-1:
   script:
     - echo "Executing test 1..."
     - mkdir -p result_job1
-    - bash ./run_test_L.1.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-06-15.tif
+    - bash ./run_test_L.1.sh result_${CI_COMMIT_SHORT_SHA}_job1 /opt/spacetime/layouts/layout_2021-06-15.tif
     - mv result*.csv result_job1/
   artifacts:
     paths:
@@ -40,7 +40,8 @@ execute-job-2:
   script:
     - echo "Executing test 2..."
     - mkdir -p result_job2
-    - bash ./run_test_L.2.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-06-15.tif
+    # - bash ./run_test_L.2.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-06-15.tif
+    - bash ./run_test_L.2.sh result_${CI_COMMIT_SHORT_SHA}_job2 /opt/spacetime/layouts/layout_2021-06-15.tif
     - mv result*.csv result_job2/
   artifacts:
     paths:
@@ -55,7 +56,7 @@ execute-job-3:
   script:
     - echo "Executing test 3..."
     - mkdir -p result_job3
-    - bash ./run_test_L.1.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-08-16.tif
+    - bash ./run_test_L.1.sh result_${CI_COMMIT_SHORT_SHA}_job3 /opt/spacetime/layouts/layout_2021-08-16.tif
     - mv result*.csv result_job3/
   artifacts:
     paths:
@@ -70,7 +71,7 @@ execute-job-4:
   script:
     - echo "Executing test 4..."
     - mkdir -p result_job4
-    - bash ./run_test_L.2.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-08-16.tif
+    - bash ./run_test_L.2.sh result_${CI_COMMIT_SHORT_SHA}_job4 /opt/spacetime/layouts/layout_2021-08-16.tif
     - mv result*.csv result_job4/
   artifacts:
     paths:
@@ -85,7 +86,7 @@ execute-job-5:
   script:
     - echo "Executing test 5..."
     - mkdir -p result_job5
-    - bash ./run_test_L.1.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-10-10.tif
+    - bash ./run_test_L.1.sh result_${CI_COMMIT_SHORT_SHA}_job5 $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-10-10.tif
     - mv result*.csv result_job5/
   artifacts:
     paths:
@@ -100,7 +101,7 @@ execute-job-6:
   script:
     - echo "Executing test 6..."
     - mkdir -p result_job6
-    - bash ./run_test_L.2.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-10-10.tif
+    - bash ./run_test_L.2.sh  result_${CI_COMMIT_SHORT_SHA}_job6 /opt/spacetime/layouts/layout_2021-10-10.tif
     - mv result*.csv result_job6/
   artifacts:
     paths:
@@ -115,7 +116,7 @@ execute-job-7:
   script:
     - echo "Executing test 7..."
     - mkdir -p result_job7
-    - bash ./run_test_L.1.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2022-03-17.tif
+    - bash ./run_test_L.1.sh  result_${CI_COMMIT_SHORT_SHA}_job7 /opt/spacetime/layouts/layout_2022-03-17.tif
     - mv result*.csv result_job7/
   artifacts:
     paths:
@@ -130,7 +131,7 @@ execute-job-8:
   script:
     - echo "Executing test 8..."
     - mkdir -p result_job8
-    - bash ./run_test_L.2.sh $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2022-03-17.tif
+    - bash ./run_test_L.2.sh  result_${CI_COMMIT_SHORT_SHA}_job8 /opt/spacetime/layouts/layout_2022-03-17.tif
     - mv result*.csv result_job8/
   artifacts:
     paths:
@@ -143,32 +144,34 @@ execute-job-8:
 collect-results:
   stage: collect
   script:
+    - rm -rf combined_results || echo "No exist dir"
     - mkdir -p combined_results
     - echo "layout_name;crop_name;ul;ur;br;bl;crs;start;end" > combined_results/combined_result.csv
     - echo "Collecting results from job 1..."
-    - cp result_job1/* combined_results/ || echo "No results from job 1"
-    - grep -v "layout_name" result_job1/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 2..."
-    - cp result_job2/* combined_results/ || echo "No results from job 2"
-    - grep -v "layout_name" result_job2/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 3..."
-    - cp result_job3/* combined_results/ || echo "No results from job 3"
-    - grep -v "layout_name" result_job3/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 4..."
-    - cp result_job4/* combined_results/ || echo "No results from job 4"
-    - grep -v "layout_name" result_job4/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 5..."
-    - cp result_job5/* combined_results/ || echo "No results from job 5"
-    - grep -v "layout_name" result_job5/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 6..."
-    - cp result_job6/* combined_results/ || echo "No results from job 6"
-    - grep -v "layout_name" result_job6/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 7..."
-    - cp result_job7/* combined_results/ || echo "No results from job 7"
-    - grep -v "layout_name" result_job7/*.csv >> combined_results/combined_result.csv
-    - echo "Collecting results from job 8..."
-    - cp result_job8/* combined_results/ || echo "No results from job 8"
-    - grep -v "layout_name" result_job8/*.csv >> combined_results/combined_result.csv
+    - cp result_job?/result_${CI_COMMIT_SHORT_SHA}_job?.csv combined_results/ || echo "No results from job 1"
+    - grep -v "layout_name" result_job*/result_${CI_COMMIT_SHORT_SHA}_job*.csv >> combined_results/combined_result.csv
+    # # - grep -v "layout_name" result_job1/result_${CI_COMMIT_SHORT_SHA}_job1.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 2..."
+    # - cp result_job2/result_${CI_COMMIT_SHORT_SHA}_job2.csv combined_results/ || echo "No results from job 2"
+    # # - grep -v "layout_name" result_job2/result_${CI_COMMIT_SHORT_SHA}_job2.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 3..."
+    # - cp result_job3/result_${CI_COMMIT_SHORT_SHA}_job3.csv combined_results/ || echo "No results from job 3"
+    # # - grep -v "layout_name" result_job3/result_${CI_COMMIT_SHORT_SHA}_job3.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 4..."
+    # - cp result_job4/result_${CI_COMMIT_SHORT_SHA}_job4.csv combined_results/ || echo "No results from job 4"
+    # # - grep -v "layout_name" result_job4/*.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 5..."
+    # - cp result_job5/result_${CI_COMMIT_SHORT_SHA}_job5.csv combined_results/ || echo "No results from job 5"
+    # # - grep -v "layout_name" result_job5/*.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 6..."
+    # - cp result_job6/* combined_results/ || echo "No results from job 6"
+    # - grep -v "layout_name" result_job6/*.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 7..."
+    # - cp result_job7/* combined_results/ || echo "No results from job 7"
+    # - grep -v "layout_name" result_job7/*.csv >> combined_results/combined_result.csv
+    # - echo "Collecting results from job 8..."
+    # - cp result_job8/* combined_results/ || echo "No results from job 8"
+    # - grep -v "layout_name" result_job*/result_${CI_COMMIT_SHORT_SHA}_job*.csv >> combined_results/combined_result.csv
     - echo "Processing combined results..."
     - ls -R combined_results/
     # Здесь можно добавить дополнительные команды для обработки результатов
