--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ execute-job-1:
     - echo "Executing test 1..."
     - mkdir -p result_job1
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job1.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.1.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-06-15.tif
     - mv result*.csv result_job1/
   artifacts:
@@ -43,7 +43,7 @@ execute-job-2:
     - echo "Executing test 2..."
     - mkdir -p result_job2
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job2.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.2.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-06-15.tif
     - mv result*.csv result_job2/
   artifacts:
@@ -60,7 +60,7 @@ execute-job-3:
     - echo "Executing test 3..."
     - mkdir -p result_job3
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job3.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.1.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-08-16.tif
     - mv result*.csv result_job3/
   artifacts:
@@ -77,7 +77,7 @@ execute-job-4:
     - echo "Executing test 4..."
     - mkdir -p result_job4
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job4.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.2.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-08-16.tif
     - mv result*.csv result_job4/
   artifacts:
@@ -94,7 +94,7 @@ execute-job-5:
     - echo "Executing test 5..."
     - mkdir -p result_job5
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job5.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.1.sh "$RESULT_FILE" $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-10-10.tif
     - mv result*.csv result_job5/
   artifacts:
@@ -111,7 +111,7 @@ execute-job-6:
     - echo "Executing test 6..."
     - mkdir -p result_job6
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job6.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.2.sh  "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-10-10.tif
     - mv result*.csv result_job6/
   artifacts:
@@ -128,7 +128,7 @@ execute-job-7:
     - echo "Executing test 7..."
     - mkdir -p result_job7
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job7.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.1.sh  "$RESULT_FILE" /opt/spacetime/layouts/layout_2022-03-17.tif
     - mv result*.csv result_job7/
   artifacts:
@@ -145,7 +145,7 @@ execute-job-8:
     - echo "Executing test 8..."
     - mkdir -p result_job8
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job8.csv"
-    - echo "Result file will be: $RESULT_FILE"
+    # - echo "Result file will be: $RESULT_FILE"
     - bash ./run_test_L.2.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2022-03-17.tif
     - mv result*.csv result_job8/
   artifacts:
