--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -95,7 +95,7 @@ execute-job-5:
     - mkdir -p result_job5
     - RESULT_FILE="result_${CI_COMMIT_SHORT_SHA}_job5.csv"
     # - echo "Result file will be: $RESULT_FILE"
-    - bash ./run_test_L.1.sh "$RESULT_FILE" $CI_COMMIT_SHORT_SHA /opt/spacetime/layouts/layout_2021-10-10.tif
+    - bash ./run_test_L.1.sh "$RESULT_FILE" /opt/spacetime/layouts/layout_2021-10-10.tif
     - mv result*.csv result_job5/
   artifacts:
     paths:
