multiple test version 0.2. run_test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -318,3 +318,11 @@ collect-results:
     - execute-job-6
     - execute-job-7
     - execute-job-8
+    - execute-job-9
+    - execute-job-10
+    - execute-job-11
+    - execute-job-12
+    - execute-job-13
+    - execute-job-14
+    - execute-job-15
+    - execute-job-16
