synttest v0.0.3 run_synttest

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -322,6 +322,8 @@ collect-results:
     - execute-job-14
     - execute-job-15
     - execute-job-16
+  rules:
+    - if: '$CI_COMMIT_MESSAGE =~ /.*run_test.*/'
 
 
 execute-syntjob-1:
@@ -611,3 +613,5 @@ collect-syntresults:
     - execute-syntjob-14
     - execute-syntjob-15
     - execute-syntjob-16
+  rules:
+    - if: '$CI_COMMIT_MESSAGE =~ /.*run_synttest.*/'
