update .gitlab-ci.yml, add retry and cache v3

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -332,3 +332,5 @@ collect-results:
     - execute-job-14
     - execute-job-15
     - execute-job-16
+  rules:
+    - if: '$CI_COMMIT_MESSAGE =~ /.*run_test.*/'
